src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__call_log__call_log_empty_pane.snap
---
source: src/tui/snapshot_tests/call_log.rs
assertion_line: 39
expression: terminal.backend()
---
"┌Call Log — 0 events • #868────────────────────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                     No events yet                                                    │"
"│                                                                                                                      │"
"│                                The agent has not produced any tool calls or messages.                                │"
"│                                                                                                                      │"
"│                                           Press [Esc] to return to Detail.                                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [Esc] Back  [Enter] Expand  [j/k] [↑/↓] Move  [g/G] Top/Bottom   [f] Follow: off                                       "
