src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__call_log__call_log_expanded_thinking.snap
---
source: src/tui/snapshot_tests/call_log.rs
assertion_line: 163
expression: terminal.backend()
---
"┌Call Log — 3 events • #868────────────────────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ 2 / 3 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│10:42:00  AssistantMsg  {"text":"start"}                                                                              │"
"│10:42:01  Thinking      {"text":"Step 1: read the file. Step 2: understand context. Step 3: write the fi…             │"
"│10:42:02  ToolUse       {"tool":"Write"}                                                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Payload (Thinking @ 10:42:01) ───────────────────────────────────────────────────────────────────────────────────────┐"
"│{"text":"Step 1: read the file. Step 2: understand context. Step 3: write the fix."}                                  │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [Esc] Back  [Enter] Collapse  [j/k] Scroll payload  [↑/↓] Move  [g/G] Top/Bottom   [f] Follow: off                     "
