src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__call_log__call_log_follow_tail_on.snap
---
source: src/tui/snapshot_tests/call_log.rs
assertion_line: 115
expression: terminal.backend()
---
"┌Call Log — 10 events • #868───────────────────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ 10 / 10 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│10:42:00  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:01  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:02  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:03  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:04  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:05  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:06  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:07  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:08  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:09  AssistantMsg  {"text":"chunk"}                                                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [Esc] Back  [Enter] Expand  [j/k] [↑/↓] Move  [g/G] Top/Bottom   [f] Follow: ON                                        "
