src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__call_log__call_log_with_error_event_uses_accent_color.snap
---
source: src/tui/snapshot_tests/call_log.rs
expression: terminal.backend()
---
"┌Call Log — 3 events • #868────────────────────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ 1 / 3 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│10:42:00  AssistantMsg  {"text":"working..."}                                                                         │"
"│10:42:01  ToolUse       {"tool":"Bash","command_preview":"cargo test"}                                                │"
"│10:42:02  Error         {"message":"context window exceeded"}                                                         │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [Esc] Back  [Enter] Expand  [j/k] [↑/↓] Move  [g/G] Top/Bottom                                                         "
