src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__call_log__call_log_with_hook_response.snap
---
source: src/tui/snapshot_tests/call_log.rs
assertion_line: 93
expression: terminal.backend()
---
"┌Call Log — 2 events • #868────────────────────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ 2 / 2 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│10:42:00  ToolUse       {"type":"ToolUse","tool":"Bash","command_preview":"cargo test"}                               │"
"│10:42:01  HookResponse  {"type":"HookResponse","hook_name":"pre-commit","exit_code":1,"stdout":"","stder…             │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [Esc] Back  [Enter] Expand  [j/k] [↑/↓] Move  [g/G] Top/Bottom                                                         "
