src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__call_log__call_log_with_many_events_selection_mid.snap
---
source: src/tui/snapshot_tests/call_log.rs
expression: terminal.backend()
---
"┌Call Log — 50 events • #868───────────────────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ 26 / 50 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│10:42:20  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:21  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:22  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:23  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:24  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:25  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:26  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:27  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:28  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:29  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:30  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:31  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:32  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:33  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:34  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:35  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:36  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:37  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:38  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:39  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:40  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:41  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:42  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:43  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:44  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:45  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:46  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:47  AssistantMsg  {"text":"chunk"}                                                                              │"
"│10:42:48  ToolUse       {"text":"chunk"}                                                                              │"
"│10:42:49  AssistantMsg  {"text":"chunk"}                                                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [Esc] Back  [Enter] Expand  [j/k] [↑/↓] Move  [g/G] Top/Bottom                                                         "
