src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__call_log__call_log_with_three_events.snap
---
source: src/tui/snapshot_tests/call_log.rs
assertion_line: 67
expression: terminal.backend()
---
"┌Call Log — 3 events • #868────────────────────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ 1 / 3 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│10:42:00  AssistantMsg  {"text":"Analyzing codebase..."}                                                              │"
"│10:42:01  ToolUse       {"tool":"Read","file_path":"src/lib.rs"}                                                      │"
"│10:42:02  ToolResult    {"tool":"Read","is_error":false}                                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [Esc] Back  [Enter] Expand  [j/k] [↑/↓] Move  [g/G] Top/Bottom   [f] Follow: off                                       "
